fixed squished joined players box for host

--- a/client/src/Game.css
+++ b/client/src/Game.css
@@ -3,6 +3,7 @@
     margin-top: -15px;
 }
 
+
 .players-container {
     width: 300px;
     height: 400px;
@@ -13,7 +14,7 @@
     overflow-y: hidden; /* Ensures overflow is controlled */
     display: flex;
     flex-direction: column; /* Ensures the header and list stack correctly */
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 20px;
 }
 
